more alignment issues

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,7 +1,7 @@
 * {
     padding: 0;
     margin: 0;
-    scroah-behavior: smooth;
+    scroll-behavior: smooth;
     text-decoration: none;
     }
 
@@ -51,6 +51,18 @@
     display: flex;
     flex-direction: row;
     background-color: #000000;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.ah__navbar-menusys_container-links {
+    display: flex;
+    flex-direction: column;
+    background-color: #000000;
+    z-index: 9998;
+    justify-content: space-between;
+    align-items: center;
+    top: 15px; /* adjust as needed */
 }
 
 .ah__navbar-links_container ul {
@@ -145,6 +157,16 @@
         position: fixed;
         top: 2px; /* adjust as needed */
     }
+    
+    .ah__navbar-menusys_container-links {
+        display: flex;
+        flex-direction: column;
+        background-color: #000000;
+        z-index: 9998;
+        justify-content: space-between;
+        align-items: center;
+        top: 15px; /* adjust as needed */
+    }
 }
 
 @media screen and (max-width: 550px) {
@@ -153,14 +175,15 @@
         padding-left: .5rem;
         padding-top: 10px;
     }
-
+    
     .ah__navbar-menusys_container-links {
         display: flex;
         flex-direction: column;
         background-color: #000000;
         z-index: 9998;
-        justify-content: space-evenly;
-        top: 2px; /* adjust as needed */
+        justify-content: space-between;
+        align-items: center;
+        top: 15px; /* adjust as needed */
     }
 
     .ah__navbar-menusys svg {
@@ -195,22 +218,15 @@
         margin-right: .1rem;
         position: fixed;
     }
-    .ah__navbar-menusys_container {
+
+    .ah__navbar-menusys_container-links {
         display: flex;
         flex-direction: column;
         background-color: #000000;
         z-index: 9998;
-        position: fixed;
-        top: 2px; /* adjust as needed */
-    }
-
-    .ah__navbar-menusys_container-links{
-        display: flex;
-        flex-direction: column;
-        background-color: #000000;
-        margin-top: 20px;
-        min-width: 90px;
+        justify-content: space-between;
         align-items: center;
+        top: 15px; /* adjust as needed */
     }
 
     .ah__navbar-name {
@@ -226,6 +242,5 @@
 
     .nav-links {
         justify-content: space-between;
-        margin-left: .5rem;
       }
 }
